--- a/src/styles/controls.css
+++ b/src/styles/controls.css
@@ -1,21 +1,25 @@
 .controls {
-    height: 20%;
+    position: fixed;
+    height: 21%;
     width: 560px;
     display: flex;
     align-items: center;
     overflow: auto;
     white-space: nowrap;
     justify-content: space-between;
+    z-index: 3;
     
 }
 button {
-    font-size: 2.5rem;
-    min-height: 30px;
-    width: auto;
-    background-color: Transparent;
+    font-size: 2rem;
+    height: 6rem;
+    width: 6rem;
+    max-height: 30vw;
+    max-width: 30vw;
+    background-color:  rgba(0, 0, 0, 0.075);;
     background-repeat:no-repeat;
-    margin-top: 1%;
     color: white;
+    margin-bottom: 0; 
     padding: 30px;
     border: none;
     text-align: center;
