--- a/src/styles/description.css
+++ b/src/styles/description.css
@@ -4,6 +4,12 @@
     right: 5rem;
     bottom: 10rem;
     justify-self: flex-start;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    z-index: 1;
+
 }
 .header {
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
@@ -12,6 +18,12 @@
     text-rendering: optimizeLegibility;
     color: white;
     font-size: 3rem;
+    transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+
 }
 .ctrl {
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
@@ -34,5 +46,12 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-
+    
+}
+.start {
+     cursor: pointer;
+     z-index: 4;
+}
+.start:hover {
+    font-size: 3.5rem;
 }
