--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,34 +5,68 @@ html, body, .root  {
     margin: 0;
     overflow-x: hidden;
     overflow-y: hidden;
+    z-index: 0;
 
 }
 .field {
-    margin-top: 10px;
-    margin-right: 10%;
+    position:relative;
+    left:0px;
+    top:0px;
     flex-shrink: 0;
     width: 560px;
     height: 100%;
     max-height: 800px;
     min-height: 560px;
     border: 5px white dotted;
+    background-color: transparent;
+    z-index: 2;
 }
 canvas {
+    overflow: hidden;
     position: relative;
-
     width: 100%;
     height: 100%;
 }
+.upper {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    filter: blur(25px);
+    background-color:rgba(24, 140, 207, 0.1);
+}
 
-.Pong {
+.pong {
     display:inline-flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%; 
-    background-image: linear-gradient(to bottom right, #6465A5,rgb(42, 161, 112));
+   
 }
-
+.background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom right, #6465A5,rgb(42, 161, 112));
+    z-index: 0;
+    transition: all ease-in-out 1s;
+}
+.background::after {
+    content: '';
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-image: linear-gradient(to bottom right, #6465A5,rgb(42, 161, 112));
+    opacity: 0;
+    transition: all 3s ease-in-out;
+}
+ .started:after{
+     opacity: 1;
+ }
 @media (max-width:320px)  { 
     /* smartphones, iPhone, portrait 480x320 phones */  
       .field {
@@ -41,15 +75,26 @@ canvas {
         width: 100%;
         min-height: auto;
         height: 85%;
+
+    }
+    canvas {
+        
         border-left: none;
         border-right: none;
     }
-    .Pong {
+    .pong {
         display: flex;
-        background-image: linear-gradient(to bottom, #6465A5,rgb(42, 161, 112));
+        
     }
     .controls {
+        border: tomato 5px solid;
         width: 100%;
+    }
+    .background {
+        background-image: linear-gradient(to bottom, #6465A5,rgb(42, 161, 112));
+    }
+    .background::after {
+        background-image: linear-gradient(to bottom, #6465A5,rgb(24, 140, 207));
     }
 }
 
@@ -63,11 +108,20 @@ canvas {
         border-right: none;
         border-left: none;
     }
-    .Pong {
+    .pong {
         display: block;
-        background-image: linear-gradient(to bottom, #6465A5,rgb(42, 161, 112));
     }
     .controls {
         width: 100%;
+    }
+    canvas {
+        border-left: none;
+        border-right: none;
+    }
+    .background {
+        background-image: linear-gradient(to bottom, #6465A5,rgb(42, 161, 112));
+    }
+    .background::after {
+        background-image: linear-gradient(to bottom, #6465A5,rgb(24, 140, 207));
     }
 }
