--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,18 +23,18 @@ html, body, .root  {
 }
 canvas {
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
+
 }
 .upper {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    filter: blur(25px);
-    background-color:rgba(24, 140, 207, 0.1);
+    filter: blur(3px);
+    backdrop-filter: blur(3px);
+    -webkit-filter: blur(3px);
 }
 
 .pong {
@@ -87,7 +87,6 @@ canvas {
         
     }
     .controls {
-        border: tomato 5px solid;
         width: 100%;
     }
     .background {
