--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,7 +17,7 @@ html, body, .root  {
     height: 100%;
     max-height: 800px;
     min-height: 560px;
-    border: 5px white dotted;
+    border: 5px rgba(255, 255, 255, 0.2) dotted;
     background-color: transparent;
     z-index: 2;
 }
@@ -60,7 +60,7 @@ canvas {
     top: 0px;
     right: 0px;
     bottom: 0px;
-    background-image: linear-gradient(to bottom right, #6465A5,rgb(42, 161, 112));
+    background-image: linear-gradient(to bottom right, #6465A5,rgb(126, 110, 216));
     opacity: 0;
     transition: all 3s ease-in-out;
 }
