--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,7 +17,10 @@ html, body, .root  {
     height: 100%;
     max-height: 800px;
     min-height: 560px;
-    border: 5px rgba(255, 255, 255, 0.2) dotted;
+    border-bottom: 5px rgba(255, 255, 255, 0.2) dotted;
+    border-top: 5px rgba(255, 255, 255, 0.2) dotted;
+    border-left: 5px rgba(255, 255, 255, 0.575) dotted;
+    border-right: 5px rgba(255, 255, 255, 0.575) dotted;
     background-color: transparent;
     z-index: 2;
 }
@@ -32,9 +35,9 @@ canvas {
 
 }
 .upper {
-    filter: blur(3px);
-    backdrop-filter: blur(3px);
-    -webkit-filter: blur(3px);
+    filter: blur(5px);
+    backdrop-filter: blur(5px);
+    -webkit-filter: blur(5px);
 }
 
 .pong {
